# outbox

./: Cargo.toml  LICENSE  README.md  deny.toml
outbox/: Cargo.toml
outbox-core/: Cargo.toml
outbox-core/src/: error.rs  lib.rs  model.rs  processor.rs  publisher.rs  repository.rs
outbox-nats/: Cargo.toml
outbox-nats/src/: lib.rs
outbox-sqlx/: Cargo.toml
outbox-sqlx/src/: lib.rs
outbox/src/: config.rs  error.rs  lib.rs  model.rs  nats.rs  postgres.rs  processor.rs  publisher.rs  repository.rs
outbox/src/nats/: nats.rs
outbox/src/postgres/: postgres.rs
outbox/src/sqlx/: sqlx.rs
