[workspace.package]
edition = "2024"
authors = ["Julio Alorro"]
license = "MIT"
readme = "README.md"

[workspace]
resolver = "3"
members = ["outbox-core", "outbox-nats", "outbox-sqlx"]

[workspace.dependencies]
async-trait = { version = "0.1.89" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "postgres", 
  "runtime-tokio",
  "macros", 
  "uuid", 
  "time"
] }
thiserror = { version = "2.0.18" }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = [
  "macros", 
  "rt-multi-thread", 
  "sync", 
  "time"
] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v7"] } 

# Test Dependencies
dtor = { version = "1.0.3" }
serial_test = "3.4.0"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
