[workspace.package]
edition = "2024"
authors = ["Julio Alorro"]
license = "MIT"
readme = "README.md"

[workspace]
resolver = "3"
members = ["outbox"]

[workspace.dependencies]
async-nats = { version = "0.49.0", features = ["websockets"] }
async-trait = { version = "0.1.89" }
base64 = { version = "0.22.1" }
bytes = "1.11.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "postgres", 
  "runtime-tokio",
  "macros", 
  "uuid", 
  "time"
] }
thiserror = { version = "2.0.18" }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = [
  "macros", 
  "rt-multi-thread", 
  "sync", 
  "time"
] }
tracing = "0.1.44"
uuid = { version = "1.23.2", features = ["serde", "v7"] } 

# Test Dependencies
dtor = { version = "1.0.5" }
serial_test = "3.5.0"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
