[package]
name = "outbox-nats"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
outbox-core = { path = "../outbox-core", features = [] }

async-nats.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
