[package]
name = "outbox-sqlx"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
outbox-core = { path = "../outbox-core", features = ["sqlx"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
dtor.workspace = true
serial_test.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
