[package]
name              = "outbox"
version           = "0.1.0"
edition.workspace = true
publish           = false

[features]
nats     = ["dep:async-nats", "dep:base64", "dep:bytes", "dep:tokio", "dep:uuid"]
postgres = ["dep:sqlx","sqlx/postgres", "sqlx/time", "dep:time", "dep:uuid"]

[dependencies]
async-trait.workspace = true
futures.workspace     = true
serde_json.workspace  = true
thiserror.workspace   = true
tracing.workspace     = true

# nats feature dependencies
async-nats = { workspace = true, optional = true }
base64     = { workspace = true, optional = true }
bytes      = { workspace = true, optional = true }
tokio      = { workspace = true, optional = true }

# postgres feature dependencies
sqlx = { workspace = true, optional = true }
time = { workspace = true, optional = true }

uuid = { workspace = true, optional = true }

[dev-dependencies]
dtor.workspace                   = true
serial_test.workspace            = true
testcontainers.workspace         = true
testcontainers-modules.workspace = true
tokio.workspace                  = true
